Change lint target for furiosa_sdk_quantizer
Fix lint module target for each module instead of 'furiosa'

Fixes #6

--- a/python/furiosa-sdk-model-validator/Makefile
+++ b/python/furiosa-sdk-model-validator/Makefile
@@ -7,7 +7,7 @@ build:
 	python -m build
 
 lint:
-	pylint furiosa
+	pylint furiosa_sdk_model_validator
 
 upload_test:
 	twine upload --repository testpypi dist/*
