--- a/python/furiosa-sdk-quantizer/Makefile
+++ b/python/furiosa-sdk-quantizer/Makefile
@@ -7,7 +7,7 @@ build:
 	python -m build
 
 lint:
-	pylint furiosa
+	pylint furiosa_sdk_quantizer
 
 upload_test:
 	twine upload --repository testpypi dist/*
